--- a/html/profile.html
+++ b/html/profile.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="..//css/profile.css">
-    <link rel="stylesheet" href="..//css/jquery-countryselector.css">
+    <link href="..//css/jquery-countryselector.min.css" rel="stylesheet"> <!-- JQuery CountrySelector CSS -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="..//js/profile.js"></script>
-    <script src="..//js/jquery.countrySelector.js"></script>
+
     <title>Your Profile</title>
 </head>
 
@@ -53,42 +54,24 @@
                                 </div>
                                 <div class="input-box">
                                     <label for="">Mobile Phone</label>
-                                    <input type="text" placeholder="Enter mobile number" minlength="10">
+                                    <input type="text" id="phone" name="phone" placeholder="Enter mobile number">
                                 </div>
                                 <div class="input-box">
                                     <label for="">Gender</label>
                                     <select id="gender" name="gender" id="">
+                                        <option value="">Select your Gender</option>
                                         <option value="male">Male</option>
                                         <option value="female">Female</option>
                                         <option value="no">No Defined</option>
                                     </select>
                                 </div>
-                            </div>
-                        </div>
 
-                        <div class="details ID">
-                            <span class="title">Bill Details</span>
-                            <div class="fields">
                                 <div class="input-box">
-                                    <label for="">Id Number</label>
-                                    <input type="text" placeholder="Enter ID number">
-                                </div>
-                                <div class="input-box">
-                                    <label for="">Bill Address</label>
-                                    <input type="text" placeholder="Bill Address">
-                                </div>
-                                <div class="input-box">
-                                    <label for="">Age</label>
-                                    <input type="number" placeholder="Age">
-                                </div>
-                                <div class="input-box" style="background-color: red;">
                                     <label for="">Country</label>
-                                    <!--<input type="date" placeholder="Country"> -->
-                                    <select value="FRA" data-role="country-selector"></select>
-
-
-
-
+                                    <!-- JQuery  Country Selector plugin       
+                                    https://www.jqueryscript.net/form/Simple-Flexible-jQuery-Country-Select-Box-Plugin-countrySelector.html -->
+                                    <select id="country-selector" value="SYC" data-role="country-selector"></select>
+                                    <!-- Selector Plugin -->
                                 </div>
                                 <div class="input-box">
                                     <label for="">Province</label>
@@ -102,9 +85,9 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div id="save-button"><button type="submit">Save</button></div>
+                    <!-- Script for JQuery CountrySelector -->
+                    <script src="..//js/jquery.countrySelector.js"></script>
                 </form>
             </div>
 
