--- a/html/profile.html
+++ b/html/profile.html
@@ -37,49 +37,50 @@
 
                             <div class="fields">
                                 <div class="input-box">
-                                    <label for="">Full Name</label>
-                                    <input type="text" placeholder="Full Name" required>
+                                    <label for="full-name">Full Name</label>
+                                    <input id="full-name" name="full-name" type="text" placeholder="Full Name" required>
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Date of Birthay</label>
-                                    <input type="date" placeholder="Enter birth date">
+                                    <label for="birthday">Date of Birthay</label>
+                                    <input id="birthday" name="birthday" type="date" placeholder="Enter birth date">
                                 </div>
                                 <div class="input-box">
                                     <label for="emailInput">Email</label>
                                     <input id="emailInput" name="emailInput" type="text" placeholder="Email">
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Address</label>
-                                    <input type="text" placeholder="Enter your address" required>
+                                    <label for="address">Address</label>
+                                    <input id="address" name="address" type="text" placeholder="Enter your address"
+                                        required>
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Mobile Phone</label>
+                                    <label for="phone">Mobile Phone</label>
                                     <input type="text" id="phone" name="phone" placeholder="Enter mobile number">
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Gender</label>
+                                    <label for="gender">Gender</label>
                                     <select id="gender" name="gender" id="">
                                         <option value="">Select your Gender</option>
                                         <option value="male">Male</option>
                                         <option value="female">Female</option>
-                                        <option value="no">No Defined</option>
+                                        <option value="no">Other</option>
                                     </select>
                                 </div>
 
                                 <div class="input-box">
-                                    <label for="">Country</label>
+                                    <label for="country-selector">Country</label>
                                     <!-- JQuery  Country Selector plugin       
                                     https://www.jqueryscript.net/form/Simple-Flexible-jQuery-Country-Select-Box-Plugin-countrySelector.html -->
                                     <select id="country-selector" value="SYC" data-role="country-selector"></select>
                                     <!-- Selector Plugin -->
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Province</label>
-                                    <input type="text" placeholder="Enter Province">
+                                    <label for="province">Province</label>
+                                    <input id="province" name="province" type="text" placeholder="Enter Province">
                                 </div>
                                 <div class="input-box">
-                                    <label for="">Postal Code</label>
-                                    <input type="text" placeholder="Postal Code">
+                                    <label for="postal-code">Postal Code</label>
+                                    <input id="postal-code" name="postal-code" type="text" placeholder="Postal Code">
                                 </div>
 
                             </div>
