--- a/productdetail.html
+++ b/productdetail.html
@@ -10,6 +10,23 @@
 </head>
  
 <body>
+  <div class="header-menu">
+    <div class="logo">
+      <img src="../img/SolaceFurniture_Logo01.jpg" width="100" height="100" at="Solace logo">
+    </div>
+    <nav>
+      <!--<input type="checkbox" id="menu-toggle">-->
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Account</a></li>
+        <li><a href="#">Chairs</a></li>
+        <li><a href="#">Beds</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="container">
     <!--<div class="title">Product Detail</div>-->
     <div class="content">
