--- a/tempproductcatalog.html
+++ b/tempproductcatalog.html
@@ -5,12 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Catalogue Page</title>
-  <link rel="stylesheet" href="css/products.css">
-  <link href="lib/jquery-ui.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="lib/jquery-ui.min.css" rel="stylesheet">
 </head>
  
 <body>
-  <div class="container">
+  <div class="header-menu">
+    <div class="logo">
+      <img src="../img/SolaceFurniture_Logo01.jpg" width="100" height="100" at="Solace logo">
+    </div>
+    <nav>
+      <!--<input type="checkbox" id="menu-toggle">-->
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Account</a></li>
+        <li><a href="#">Chairs</a></li>
+        <li><a href="#">Beds</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </div>
     <div class="title">Chairs</div>
     <button id="button" onclick="console.log('Hellerski')">Add to Cart</button>
     <div class="productList">
@@ -68,7 +84,8 @@
     }
     
   </script>
-  <script src="jquery-ui.js"></script>
+  <script src="external/jquery/jquery.js"></script>
+  <script src="jquery-ui.min.js"></script>
   <script>
   $( "#accordion" ).accordion();
   
